Rename use case coupon

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,19 @@ spring.application.name=coupon-favorites-items
 app.retrofit.write-timeout=30000
 app.retrofit.read-timeout=15000
 app.retrofit.connection-timeout=10000
-app.retrofit.token-public-api=Bearer APP_USR-4981093903341805-033012-2ebb89036a9eb9fb85be392cfddb7025-198784462
 app.retrofit.authorization-header-name=Authorization
 ##Url base retrofit
 app.meli.public.api=https://api.mercadolibre.com/
+app.meli.public.api.token=Bearer APP_USR-4981093903341805-033019-6ece0a9aac464cc34c67962a41afc378-198784462
 app.meli.public.api.size-batch-item=20
 #app.meli.public.api=http://localhost:3001/
 
+# OAuth 2.0 Client
+#spring.security.oauth2.client.registration.mercadolibre.client-id=4981093903341805
+#spring.security.oauth2.client.registration.mercadolibre.client-secret=ZhAr6uHF0yllKhSYRWt0NcHrVnSQ27Y2
+#spring.security.oauth2.client.registration.mercadolibre.authorization-grant-type=authorization_code
+#spring.security.oauth2.client.registration.mercadolibre.redirect-uri=https://a7ef-190-253-247-178.ngrok-free.app/oauth2/authorization/mercadolibre
+#spring.security.oauth2.client.provider.mercadolibre.authorization-uri=https://auth.mercadolibre.com.co/authorization
+#spring.security.oauth2.client.provider.mercadolibre.token-uri=https://api.mercadolibre.com/oauth/token
+#spring.security.oauth2.client.provider.mercadolibre.user-info-uri=https://api.mercadolibre.com/oauth/userinfo
+#logging.level.org.springframework.security=DEBUG
