--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,16 +8,9 @@ app.retrofit.connection-timeout=10000
 app.retrofit.authorization-header-name=Authorization
 ##Url base retrofit
 app.meli.public.api=https://api.mercadolibre.com/
-app.meli.public.api.token=Bearer APP_USR-4981093903341805-033019-6ece0a9aac464cc34c67962a41afc378-198784462
+app.meli.public.api.token=Bearer APP_USR-4981093903341805-033116-fc7b0840c760fc1754f5a8791a364073-198784462
 app.meli.public.api.size-batch-item=20
-#app.meli.public.api=http://localhost:3001/
+app.meli.public.api.size-batch-update=20
 
-# OAuth 2.0 Client
-#spring.security.oauth2.client.registration.mercadolibre.client-id=4981093903341805
-#spring.security.oauth2.client.registration.mercadolibre.client-secret=ZhAr6uHF0yllKhSYRWt0NcHrVnSQ27Y2
-#spring.security.oauth2.client.registration.mercadolibre.authorization-grant-type=authorization_code
-#spring.security.oauth2.client.registration.mercadolibre.redirect-uri=https://a7ef-190-253-247-178.ngrok-free.app/oauth2/authorization/mercadolibre
-#spring.security.oauth2.client.provider.mercadolibre.authorization-uri=https://auth.mercadolibre.com.co/authorization
-#spring.security.oauth2.client.provider.mercadolibre.token-uri=https://api.mercadolibre.com/oauth/token
-#spring.security.oauth2.client.provider.mercadolibre.user-info-uri=https://api.mercadolibre.com/oauth/userinfo
-#logging.level.org.springframework.security=DEBUG
+# Config MongoDB
+spring.data.mongodb.uri=mongodb://admin:admin@localhost:27017/coupon-favorites?authSource=admin
