--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,22 +8,15 @@ app.retrofit.connection-timeout=10000
 app.retrofit.authorization-header-name=Authorization
 ##Url base retrofit
 app.meli.public.api=https://api.mercadolibre.com/
-app.meli.public.api.token=Bearer APP_USR-4981093903341805-033122-220ec2e70175d352940091992058534d-198784462
 app.meli.public.api.size-batch-item=20
 app.meli.public.api.size-batch-update=20
 
-# Config MongoDB
+#Config MongoDB
 spring.data.mongodb.uri=mongodb://admin:admin@localhost:27017/coupon-favorites?authSource=admin
 
-# Configuración del cliente OAuth2
-spring.security.oauth2.client.registration.my-client-id.client-id=your-client-id
-spring.security.oauth2.client.registration.my-client-id.client-secret=your-client-secret
-spring.security.oauth2.client.registration.my-client-id.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.my-client-id.redirect-uri=your-redirect-uri
-spring.security.oauth2.client.registration.my-client-id.scope=your-scope
-
-# Proveedor de OAuth2
-spring.security.oauth2.client.provider.my-client-id.authorization-uri=https://example.com/oauth/authorize
-spring.security.oauth2.client.provider.my-client-id.token-uri=https://example.com/oauth/token
-spring.security.oauth2.client.provider.my-client-id.user-info-uri=https://example.com/userinfo
-spring.security.oauth2.client.provider.my-client-id.user-name-attribute=name
+#Config client OAuth2
+oauth2.client.mercadolibre.client-id=4981093903341805
+oauth2.client.mercadolibre.client-secret=ZhAr6uHF0yllKhSYRWt0NcHrVnSQ27Y2
+oauth2.client.mercadolibre.authorization-grant-type=authorization_code
+oauth2.client.mercadolibre.redirect-uri=https://a7ef-190-253-247-178.ngrok-free.app/oauth2/authorization/mercadolibre
+oauth2.client.mercadolibre.code-authorization=TG-660b12ebd557230001af3613-198784462
