Add use cases of cache get and save

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=coupon-favorites-items
 
 
-##Retrofit config
+# Retrofit config
 app.retrofit.write-timeout=30000
 app.retrofit.read-timeout=15000
 app.retrofit.connection-timeout=10000
 app.retrofit.authorization-header-name=Authorization
-##Url base retrofit
+
+# Url base api meli
 app.meli.public.api=https://api.mercadolibre.com/
 app.meli.public.api.size-batch-item=20
 
@@ -19,3 +20,7 @@ oauth2.client.mercadolibre.client-secret=ZhAr6uHF0yllKhSYRWt0NcHrVnSQ27Y2
 oauth2.client.mercadolibre.authorization-grant-type=authorization_code
 oauth2.client.mercadolibre.redirect-uri=https://a7ef-190-253-247-178.ngrok-free.app/oauth2/authorization/mercadolibre
 oauth2.client.mercadolibre.code-authorization=TG-660b12ebd557230001af3613-198784462
+
+# Config redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
