--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,16 @@ app.retrofit.authorization-header-name=Authorization
 
 # Url base api meli
 app.meli.public.api=https://api.mercadolibre.com/
+app.meli.public.api.token=Bearer APP_USR-4981093903341805-040312-423d976621b3f22e3436b88f0d2e4fc6-198784462
 app.meli.public.api.size-batch-item=20
+app.meli.public.api.attributes_query=id,price
+
 
 # Config MongoDB
 spring.data.mongodb.uri=mongodb://admin:admin@localhost:27017/coupon-favorites?authSource=admin
+spring.data.mongodb.collection.name.items-favorites=favoriteItem
+spring.data.mongodb.collection.field.name.id=_id
+spring.data.mongodb.collection.field.name.quantity=quantity
 
 # Config client OAuth2
 oauth2.client.mercadolibre.client-id=4981093903341805
@@ -24,3 +30,4 @@ oauth2.client.mercadolibre.code-authorization=TG-660b12ebd557230001af3613-198784
 # Config redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+spring.data.redis.ttl.seconds=350
