Add unit test and validations data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,6 @@ oauth2.client.mercadolibre.code-authorization=TG-660ecc87684bb00001fbc2cd-198784
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.ttl.seconds=350
+
+# Config log
+logging.level.root=INFO
