Add conection db mongo aws

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ app.meli.public.api.attributes_query=id,price
 
 
 # Config MongoDB
-spring.data.mongodb.uri=mongodb://meliadmin:Meli.123@docdb-2024-04-05-20-03-56.chsq60ckugjc.us-east-2.docdb.amazonaws.com:27017/coupon-favorites?authSource=admin
+spring.data.mongodb.uri=mongodb://adminmeli:Meli.123@mongodb-coupon.cluster-chsq60ckugjc.us-east-2.docdb.amazonaws.com:27017
 spring.data.mongodb.collection.name.items-favorites=itemFavorite
 spring.data.mongodb.collection.field.name.id=_id
 spring.data.mongodb.collection.field.name.quantity=quantity
