--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ app.meli.public.api.attributes_query=id,price
 
 
 # Config MongoDB
-spring.data.mongodb.uri=mongodb://adminmeli:Meli.123@mongodb-coupon-chsq60ckugjc.us-east-2.docdb.amazonaws.com:27017/coupon-favorites?authSource=adminmeli
+spring.data.mongodb.uri=mongodb://admin:admin@mongodb:27017/coupon-favorites?authSource=admin
 spring.data.mongodb.collection.name.items-favorites=itemFavorite
 spring.data.mongodb.collection.field.name.id=_id
 spring.data.mongodb.collection.field.name.quantity=quantity
@@ -24,10 +24,10 @@ oauth2.client.mercadolibre.client-id=4981093903341805
 oauth2.client.mercadolibre.client-secret=ZhAr6uHF0yllKhSYRWt0NcHrVnSQ27Y2
 oauth2.client.mercadolibre.authorization-grant-type=authorization_code
 oauth2.client.mercadolibre.redirect-uri=https://a7ef-190-253-247-178.ngrok-free.app/oauth2/authorization/mercadolibre
-oauth2.client.mercadolibre.code-authorization=TG-661077d69ecdfe0001ff5172-198784462
+oauth2.client.mercadolibre.code-authorization=TG-66119c3abb6e4f0001aed30f-198784462
 
 # Config redis
-spring.data.redis.host=clustercfg.redis-coupon.hyx3gq.memorydb.us-east-2.amazonaws.com
+spring.data.redis.host=redis
 spring.data.redis.port=6379
 spring.data.redis.ttl.seconds=350
 
