Config validation token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,20 +14,22 @@ app.meli.public.api.attributes_query=id,price
 
 
 # Config MongoDB
-spring.data.mongodb.uri=mongodb://admin:admin@mongodb:27017/coupon-favorites?authSource=admin
+spring.data.mongodb.uri=mongodb://admin:admin@localhost:27017/coupon-favorites?authSource=admin
 spring.data.mongodb.collection.name.items-favorites=itemFavorite
 spring.data.mongodb.collection.field.name.id=_id
 spring.data.mongodb.collection.field.name.quantity=quantity
 
-# Config client OAuth2
+# Config client OAuth2 Api Meli
 oauth2.client.mercadolibre.client-id=4981093903341805
 oauth2.client.mercadolibre.client-secret=ZhAr6uHF0yllKhSYRWt0NcHrVnSQ27Y2
-oauth2.client.mercadolibre.authorization-grant-type=authorization_code
-oauth2.client.mercadolibre.redirect-uri=https://a7ef-190-253-247-178.ngrok-free.app/oauth2/authorization/mercadolibre
-oauth2.client.mercadolibre.code-authorization=TG-66119c3abb6e4f0001aed30f-198784462
+oauth2.client.mercadolibre.authorization-grant-type=client_credentials
+
+# Security Auth0 config
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://dev-jfjtqh787zax8awu.us.auth0.com/.well-known/jwks.json
+spring.security.oauth2.client.provider.auth0.token-uri=https://dev-jfjtqh787zax8awu.us.auth0.com/oauth/token
 
 # Config redis
-spring.data.redis.host=redis
+spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.ttl.seconds=350
 
