--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=coupon-favorites-items
 
-
 # Retrofit config
 app.retrofit.write-timeout=30000
 app.retrofit.read-timeout=15000
@@ -14,7 +13,7 @@ app.meli.public.api.attributes_query=id,price
 
 
 # Config MongoDB
-spring.data.mongodb.uri=mongodb://admin:admin@localhost:27017/coupon-favorites?authSource=admin
+spring.data.mongodb.uri=mongodb://admin:admin@mongo:27017/coupon-favorites?authSource=admin
 spring.data.mongodb.collection.name.items-favorites=itemFavorite
 spring.data.mongodb.collection.field.name.id=_id
 spring.data.mongodb.collection.field.name.quantity=quantity
@@ -29,7 +28,7 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://dev-jfjtqh787zax8a
 spring.security.oauth2.client.provider.auth0.token-uri=https://dev-jfjtqh787zax8awu.us.auth0.com/oauth/token
 
 # Config redis
-spring.data.redis.host=localhost
+spring.data.redis.host=redis
 spring.data.redis.port=6379
 spring.data.redis.ttl.seconds=350
 
