--- a/pom.xml
+++ b/pom.xml
@@ -89,9 +89,11 @@
 				<configuration>
 					<excludes>
 						<exclude>**/entity/**</exclude>
+						<exclude>**/valueobject/**</exclude>
 						<exclude>**/*Event.*</exclude>
+						<exclude>**/*Application.*</exclude>
 						<exclude>**/config/**</exclude>
-
+						<exclude>**/exception/**</exclude>
 					</excludes>
 				</configuration>
 				<executions>
