--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ app.meli.public.api.attributes_query=id,price
 
 
 # Config MongoDB
-spring.data.mongodb.uri=mongodb://admin:admin@localhost:27017/coupon-favorites?authSource=admin
+spring.data.mongodb.uri=mongodb://admin:admin@mongodb:27017/coupon-favorites?authSource=admin
 spring.data.mongodb.collection.name.items-favorites=itemFavorite
 spring.data.mongodb.collection.field.name.id=_id
 spring.data.mongodb.collection.field.name.quantity=quantity
@@ -27,7 +27,7 @@ oauth2.client.mercadolibre.authorization-grant-type=client_credentials
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://dev-jfjtqh787zax8awu.us.auth0.com/.well-known/jwks.json
 
 # Config redis
-spring.data.redis.host=localhost
+spring.data.redis.host=redis
 spring.data.redis.port=6379
 spring.data.redis.ttl.seconds=350
 
