Fix string conections

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=coupon-favorites-items
 
 # Actuator config
-management.endpoints.web.exposure.include=health,metrics
+management.endpoints.web.exposure.include=health,prometheus
 
 # Retrofit config
 app.retrofit.write-timeout=30000
@@ -16,7 +16,7 @@ app.meli.public.api.attributes_query=id,price
 
 
 # Config MongoDB
-spring.data.mongodb.uri=mongodb://admin:admin@localhost:27017/coupon-favorites?authSource=admin
+spring.data.mongodb.uri=mongodb://admin:admin@mongodb:27017/coupon-favorites?authSource=admin
 spring.data.mongodb.collection.name.items-favorites=itemFavorite
 spring.data.mongodb.collection.field.name.id=_id
 spring.data.mongodb.collection.field.name.quantity=quantity
@@ -30,7 +30,7 @@ oauth2.client.mercadolibre.authorization-grant-type=client_credentials
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://dev-jfjtqh787zax8awu.us.auth0.com/.well-known/jwks.json
 
 # Config redis
-spring.data.redis.host=localhost
+spring.data.redis.host=redis
 spring.data.redis.port=6379
 spring.data.redis.ttl.seconds=350
 
